refactor: 시간순으로의 데이터 수정